--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -53,23 +53,6 @@ main {
     margin: 0;
 }
 
-.profile-image {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid rgba(73, 73, 73, 0.541);
-    cursor: pointer;
-    margin-left: 1rem;
-}
-
-.profile-image:active {
-    width: 28px;
-    height: 28px;
-    margin-top: 1px;
-    margin-right: 1px;
-    margin-left: calc(1rem + 1px);
-}
-
 .user-icon {
     font-size: 30px;
     cursor: pointer;
@@ -83,6 +66,34 @@ main {
 .content {
     max-height: calc(100vh - 3.5rem);
     overflow: auto;
+}
+
+
+.profile-image {
+    display: inline-flex;
+    overflow: hidden;
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
+    border-radius: 50%;
+    border: 1px solid rgba(73, 73, 73, 0.541);
+    cursor: pointer;
+    margin-left: 1rem;
+
+}
+
+.profile-image:active {
+    width: 28px;
+    height: 28px;
+    margin-top: 1px;
+    margin-right: 1px;
+    margin-left: calc(1rem + 1px);
+}
+
+.profile-image img {
+    max-width: 30px;
+    max-height: 30px;
+    margin: auto;
 }
 
 .top-row {
