--- a/Shared/NavMenu.razor.css
+++ b/Shared/NavMenu.razor.css
@@ -112,8 +112,9 @@ nav {
 }
 
 .active-nav {
-    background-color: var(--sidebarColor);
+    background-color: var(--bodyBackgroundColor);
     border-radius: 0px 2rem 2rem 0px;
+    border: 3px solid var(--toprowColor);
     width: 16.5rem;
     height: 3rem;
     position: absolute;
